# radkit

./: .env.example  .gitignore  404.html  AGENTS.md  CNAME  Cargo.toml  LICENSE  README.md  index.html  sitemap.xml
.github/workflows/: docs.yml
a2a-client/: Cargo.toml  README.md
a2a-client/.cargo/: config.toml
a2a-client/src/: client.rs  constants.rs  error.rs  lib.rs
a2a-client/tests/: weather_agent_integration.rs
a2a-types/: Cargo.toml  LICENSE  README.md
a2a-types/src/: agent_card.rs  lib.rs
axum-server/: index.html
docs/: .gitignore  README.md  astro.config.mjs  mkdocs.yml  package-lock.json  package.json
docs/docs/: axum-server.md  getting-started.md  index.md  sessions.md  tasks.md  tools.md
examples/: README.md  multi_turn_conversation.rs  simple_function.rs  stateful_shopping_cart.rs  weather_agent.rs  worker_with_tools.rs
examples/hr_agent/: agent.rs
feat/: OBSERVABILITY.md
getting-started/: index.html
radkit/: .gitignore  AGENTS.md  Cargo.toml  README.md
radkit-axum/: Cargo.toml  README.md
radkit-axum/examples/: basic_server.rs  jwt_server.rs  observability_server.rs
radkit-axum/src/: auth.rs  error.rs  json_rpc.rs  lib.rs  routes.rs  server.rs
radkit-macros/: Cargo.toml  README.md
radkit-macros/src/: lib.rs  skill.rs  tool.rs  validation.rs
radkit-macros/tests/: skill_tests.rs  tool_tests.rs  ui.rs
radkit-macros/tests/ui/: missing_description.rs  missing_description.stderr  no_params.rs  no_params.stderr  not_async.rs  not_async.stderr  too_many_params.rs  too_many_params.stderr
radkit/dev_ui/static/: dev-ui.css
radkit/spec/: 00_introduction.md  01_library_primitives.md  02_library_architecture.md  03_developer_experience.md  04_deployment_model.md  05_cloud_platform.md  06_runtime.md  07_wasm-serverless-runtime.md
radkit/src/: compat.rs  errors.rs  lib.rs  macros.rs
radkit/src/agent/: builder.rs  llm_function.rs  llm_worker.rs  mod.rs  skill.rs  structured.rs  structured_parser.rs
radkit/src/agents/: agent.rs  agent_builder.rs  agent_executor.rs  config.rs  conversation_handler.rs  execution_result.rs  mod.rs
radkit/src/config/: env_resolver.rs  loader.rs  mod.rs  schema.rs  types.rs
radkit/src/config/schema/: agent.json  builtin-tool-schema.json  function-tool-schema.json  instruction-schema.json  mcp-stdio-schema.json  mcp-tool-schema.json  model-schema.json  remote-agent-schema.json
radkit/src/events/: event_bus.rs  event_processor.rs  execution_context.rs
radkit/src/models/: anthropic_llm.rs  base_llm.rs  content.rs  content_part.rs  event.rs  gemini_llm.rs  llm_request.rs  llm_response.rs  mock_llm.rs  mod.rs  openai_llm.rs  thread.rs  utils.rs
radkit/src/models/providers/: anthropic_llm.rs  deepseek_llm.rs  gemini_llm.rs  grok_llm.rs  mod.rs  openai_llm.rs  openrouter_llm.rs
radkit/src/observability/: a2a_trace.rs  config.rs  metrics.rs  mod.rs  semantic_conventions.rs  telemetry.rs  utils.rs
radkit/src/runtime/: banner.rs  context.rs  mod.rs  web.rs
radkit/src/runtime/auth/: mod.rs  static_auth.rs
radkit/src/runtime/core/: error_mapper.rs  event_bus.rs  executor.rs  mod.rs  status_mapper.rs  wasm.rs
radkit/src/runtime/core/negotiator/: default.rs  mod.rs
radkit/src/runtime/logging/: console.rs  mod.rs
radkit/src/runtime/memory/: in_memory.rs  mod.rs
radkit/src/runtime/task_manager/: default.rs  in_memory.rs  mod.rs
radkit/src/runtime/web/: dev_ui.rs
radkit/src/sessions/: in_memory_session_service.rs  mod.rs  query_service.rs  session.rs  session_event.rs  session_service.rs
radkit/src/test_support/: mod.rs
radkit/src/tools/: a2a_agent_tool.rs  base_tool.rs  base_toolset.rs  builtin_tools.rs  execution_state.rs  function_tool.rs  mod.rs  save_artifact_tool.rs  tool.rs  tool_context.rs  update_status_tool.rs
radkit/src/tools/mcp/: mcp_session_manager.rs  mcp_tool.rs  mcp_toolset.rs  mod.rs
radkit/src/tools/openapi/: mod.rs  operation_tool.rs  spec.rs  toolset.rs
radkit/tests/: agent_test.rs  anthropic_multi_turn.rs  anthropic_simple.rs  anthropic_tool_use.rs  builtin_tools_real_api.rs  builtin_tools_rejection_tests.rs  event_storage_integration.rs  executor_integration.rs  gemini_multi_turn_tool_use.rs  gemini_simple.rs  gemini_tool_use.rs  mcp_agent_e2e.rs  mcp_weather_simple.rs  models_test.rs  openai_multi_turn.rs  openai_simple.rs  openai_streaming.rs  openai_tool_use.rs  openapi_agent_e2e.rs  openapi_missing_operation_id.rs  openapi_petstore_simple.rs  runtime_test.rs  skill_execution.rs  tool_context_integration.rs  tool_macro_e2e.rs  tool_macro_worker_tests.rs  tools_test.rs  worker_execution.rs
radkit/tests/common/: mod.rs
radkit/ui/: .gitignore  README.md  index.html  package-lock.json  package.json
radkit/ui/src/: App.tsx  main.tsx
radkit/ui/src/api/: client.ts
radkit/ui/src/components/: AgentCard.tsx  ArtifactPreview.tsx  Console.tsx  EventFilterBar.tsx  Navigation.tsx  StateTransitionTimeline.tsx
radkit/ui/src/routes/: agent-detail.tsx  home.tsx
radkit/ui/src/types/: AgentInfo.ts  StateTransition.ts  TaskTransitionsResponse.ts
scripts/: build-ui.sh  coverage.sh
search/: search_index.json
sessions/: index.html
src/: errors.rs  lib.rs
src/a2a/: types.rs
src/agents/: agent.rs  config.rs  conversation_handler.rs  execution_result.rs
src/events/: event_bus.rs  event_processor.rs  execution_context.rs  internal.rs  mod.rs  projection.rs
src/models/: anthropic_llm.rs  content.rs  gemini_llm.rs  llm_request.rs  llm_response.rs  mock_llm.rs  mod.rs  openai_llm.rs
src/sessions/: in_memory_session_service.rs  mod.rs  query_service.rs  session.rs  session_event.rs  session_service.rs
src/task/: in_memory_task_store.rs  (+3 more)
tasks/: index.html
tests/: anthropic_multi_turn.rs  anthropic_simple.rs  anthropic_tool_use.rs  builtin_tools_real_api.rs  builtin_tools_rejection_tests.rs  entrypoint.rs  event_storage_integration.rs  gemini_multi_turn_tool_use.rs  gemini_simple.rs  gemini_tool_use.rs  mcp_weather_simple.rs  openai_multi_turn.rs  openai_simple.rs  openai_streaming.rs  openai_tool_use.rs  tool_context_integration.rs
tools/: index.html
(+34 files in other folders)
