[package]
name = "radkit"
version = "0.0.1"
edition = "2024"
license= "Apache-2.0"
description = "Rust AI Agent Development Kit"
repository = "https://github.com/microagents/radkit"
homepage = "https://radkit.dev"
documentation = "https://radkit.dev"
keywords = ["ai", "agent", "ai-agent", "a2a", "agent-sdk"]
readme = "README.md"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
thiserror = "2.0.14"
tracing = "0.1.41"
futures = "0.3.31"
tokio-stream = "0.1.17"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
dotenvy = "0.15"
