[workspace]
members = ["a2a-types", "a2a-client", "radkit", "radkit-macros"]
resolver = "2"

[workspace.dependencies]
tryparse = { version = "0.4.2", default-features = false, features = ["derive"] }
tryparse-derive = "0.4.2"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
