[package]
name = "a2a-client"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A2A Protocol Client - HTTP client for calling remote A2A agents"
repository = "https://github.com/microagents/radkit"
homepage = "https://radkit.dev"
documentation = "https://radkit.dev"
keywords = ["a2a", "agent2agent", "client", "ai", "agent"]
readme = "README.md"

[dependencies]
a2a-types = { path = "../a2a-types", version = "0.1.1" }
reqwest = { version = "0.12.23", features = ["json", "stream"] }
tokio = { version = "1.47", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.14"
bytes = "1.9"
futures-core = "0.3"

[dev-dependencies]
wiremock = "0.6"
uuid = { version = "1.18.0", features = ["v4"] }
