[package]
name = "a2a-client"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "A2A Protocol Client - HTTP client for calling remote A2A agents"
repository = "https://github.com/microagents/radkit"
homepage = "https://radkit.dev"
documentation = "https://radkit.dev"
keywords = ["a2a", "agent2agent", "client", "ai", "agent"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
a2a-types = { path = "../a2a-types", version = "0.1.3" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.14"
bytes = "1.9"
futures-core = "0.3"

# OpenTelemetry for distributed tracing (matching radkit versions)
opentelemetry = "0.31.0"
tracing = "0.1"
tracing-opentelemetry = "0.32.0"

# Native dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47", features = ["full"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "rustls-tls"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
uuid = { version = "1.18.0", features = ["v4"] }
futures-util = "0.3"

# Native dev-dependencies (for tests)
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.47", features = ["full"] }

# WASM dev-dependencies (for tests)
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
tokio = { version = "1.47", features = ["rt", "macros"] }
