[package]
name = "a2a-types"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
description = "A2A Protocol Types"
repository = "https://github.com/microagents/radkit"
homepage = "https://radkit.dev"
documentation = "https://radkit.dev"
keywords = ["a2a", "agent2agent", "protocol", "types"]
readme = "README.md"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"