[package]
name = "radkit-axum"
version = "0.0.1"
edition = "2021"
authors = ["Radkit Contributors"]
license = "MIT OR Apache-2.0"
description = "Axum-based A2A protocol server for Radkit agents"
repository = "https://github.com/microagents/radkit"
readme = "README.md"
keywords = ["a2a", "agent", "ai", "axum", "server"]
categories = ["web-programming", "asynchronous"]

[dependencies]
# Core dependencies
radkit = { path = "../radkit" }
a2a-types = { path = "../a2a-types" }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
async-trait = "0.1"
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = { version = "0.5", features = ["util"] }
base64 = "0.22"
tracing-subscriber = "0.3"