[package]
name = "radkit"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Rust AI Agent Development Kit"
repository = "https://github.com/microagents/radkit"
homepage = "https://radkit.dev"
documentation = "https://radkit.dev"
keywords = ["ai", "agent", "ai-agent", "a2a", "agent-sdk"]
readme = "../README.md"

[features]
default = []
# Enables the DefaultRuntime and a full native agent server environment
runtime = ["dep:axum", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber", "dep:maud"]
# Enables OpenAPI toolset for connecting to REST APIs
openapi = ["dep:openapiv3", "dep:serde_yaml", "dep:url"]
# Enables MCP (Model Context Protocol) support for connecting to external tool servers
mcp = ["dep:rmcp", "dep:tracing"]
# Enables test utilities (FakeLlm, RecordingTool) for downstream testing
test-support = []

[dependencies]
a2a-types = { path = "../a2a-types", version = "0.1.1" }
a2a-client = { path = "../a2a-client", version = "0.1.1" }
radkit-macros = { path = "../radkit-macros", version = "0.0.2" }
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
schemars = "1.0.4"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tryparse = { version = "0.3", features = ["derive"] }
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
derive_more = { version = "2.0.1", features = ["from", "display"] }
async-stream = "0.3.6"

# Optional OpenAPI dependencies
openapiv3 = { version = "2.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
url = { version = "2.5", optional = true }

[target.'cfg(not(all(target_os = "wasi", target_env = "p1")))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
# TODO: remove "full" once the core parts are done
tokio = { version = "1", features = ["full"] }
rand = "0.8"
dashmap = "6"
# Optional dependencies for the full runtime (native-only)
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
maud = { version = "0.26", optional = true }
# Optional MCP support (native-only)
rmcp = { version = "0.6.3", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"], optional = true }

[target.'cfg(all(target_os = "wasi", target_env = "p1"))'.dependencies]
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Tokio with WASI support (single-threaded runtime)
tokio = { version = "1.47.0", features = ["rt", "sync", "time", "io-util", "macros"] }
# Random number generation for WASI (no special features needed)
getrandom = "0.2"

[dev-dependencies]
http-body-util = "0.1"
dotenvy = "0.15"

[target.'cfg(all(target_os = "wasi", target_env = "p1"))'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[example]]
name = "hr_agent"
path = "../examples/hr_agent/agent.rs"
